--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "infotech",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
@@ -109,5 +109,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
