Feat(): Adding variables styles

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,9 @@
               "src/assets"
             ],
             "styles": [
+              "src/variables.scss",
               "src/styles.scss"
+
             ],
             "scripts": [],
             "server": "src/main.server.ts",
