--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css", "src/variables.scss", "src/styles.scss"],
+                        "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css", "src/variables.scss", "src/styles.scss", "node_modules/@fortawesome/fontawesome-free/css/all.min.css"],
                         "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"],
                         "server": "src/main.server.ts",
                         "prerender": true,
