--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "format": "prettier --write .",
+        "check": "prettier --check .",
         "serve:ssr:partner-ecosystem": "node dist/partner-ecosystem/server/server.mjs"
     },
     "private": true,
@@ -25,6 +26,7 @@
         "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.11.3",
         "express": "^4.18.2",
+        "jquery": "^3.7.1",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.14.3"
